--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,5 @@
-<h1>Post a tweet</h1>
-<form class="" action="/tweets" method="post">
-  <label for="">Tweet:</label>
-  <input type="text" name="content" value="">
-  <input type="submit" name="" value="submit">
+<h2>Add a tweet</h2>
+<form action="/tweets" method="POST">
+  <p>Status: <input type="text" name="content"></p>
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
