--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,8 @@
-  <h2>Welcome, <%=current_user.username%>!</h2>
-    <h3>All Tweets:</h3>
-    <%@tweets.each do |t| %>
-    <h5><%=t.content%></h5>
-    <%end%>
+<p> Welcome <%= current_user.username %>
+<h2> Tweets </h2>
+
+<% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
