--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,7 @@
-<h1>Log In To Fwitter:</h1>
+<h1>Login to Fwitter!</h1>
+<form method="post" action="/login">
+  <input type="text" name="username" placeholder="Username:">
+  <input type="text" name="password" placeholder="Password:">
 
-<form action="/login" method="post">
-  <label for="">Username:</label>
-  <input type="text"  name="username" value="">
-  <label for="">Password:</label>
-  <input type="text" name="password" value="">
-  <input type="submit" name="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
