--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,6 +3,6 @@
   <br>
   <label>Password</label><input type="text" name="password" id="password">
 
-  <input type="submit">
+  <button type="submit" id="submit"></button>
 
 </form>
