user show page, index action are complete. moving on to new action

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,6 +3,6 @@
   <br>
   <label>Password</label><input type="text" name="password" id="password">
 
-  <button type="submit" id="submit"></button>
+  <button type="submit" id="submit">Login</button>
 
 </form>
