--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,3 @@
-<h1>Welcome, <%= @user.username %> </h1>
-
-<% @tweets.each do |tweet| %>
+<% @user.tweets.each do |tweet| %>
   <%= tweet.content %>
   <% end %>
