--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,7 @@
 <h1>Welcome, <%= @user.username %> </h1>
 
 <% @tweets.each do |tweet| %>
-  <%= tweet.content %>
+  <ul>
+    <li><a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a></li>
+  </ul>
   <% end %>
