--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,9 @@
 <%= @tweet.content %>
 
-<a href="/tweets/delete">Delete Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/delete">Delete Tweet</a>
+<form action="/tweets/<%=@tweet.id%>/delete" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <button type="submit">Delete Tweet</button>
+  </form>
 
-<a href="tweets/edit">Edit Tweet </a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
