--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -4,7 +4,7 @@
   <br>
   <label>Email</label><input type="text" name="email" id="email">
   <br>
-  <label>Password</label><input type="text" name="password_digest" id="password_digest">
+  <label>Password</label><input type="text" name="password" id="password">
 
   <input type="submit">
 
