--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,7 +5,6 @@
   <input type="submit" value="Delete Tweet">
 </form>
 
-<!--
 <form action="/tweets/<%=@tweet.id%>/edit" method="POST">
   <button type="submit">Edit Tweet</button>
-</form> -->
+</form>
