--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -5,3 +5,5 @@
     <li><a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a></li>
   </ul>
   <% end %>
+
+  <a href="/tweets/new">Create Tweet</a>
