--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,6 @@
 <form action="/signup" method="post">
-<input type="taxt" name="username" id="user[username]">
-<input type="email" name="email" id="user[email]">
-<input type="password" name="password" id="user[password]">
-<input type="submit" value="submit">
-
+  <input type="taxt" name="username" id="user[username]" value="username">
+  <input type="email" name="email" id="user[email]" value="email">
+  <input type="password" name="password" id="user[password]" value="password">
+  <input type="submit" value="submit">
 </form>
