--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,5 @@
-<form action="/tweets" >
-
+<form action="/login" method="post">
+ <p>Username: <input type="taxt" name="username" id="user[username]" value="username"></p>
+ <p>Paasword: <input type="password" name="password" id="user[password]" value="password"></p>
+  <input type="submit" value="submit">
 </form>
