--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -6,8 +6,8 @@
 <body>
   <h1>Welcome to Fwitter</h1>
   <h4>Please sign up or log in</h4>
-  <a href="/registrations/signup">Sign Up</a>
-  <a href="/sessions/login">Log In</a>
+  <a href="/signup">Sign Up</a>
+  <a href="/login">Log In</a>
 
 </body>
 
