--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,9 +1,9 @@
 <h1>Sign Up Below:</h1>
 
-<form action="/registrations" method="post">
-  Name: <input type="text" name="name"><br>
+<form action="/signup" method="post">
+  Name: <input type="text" name="username"><br>
   Email: <input type="text" name="email"><br>
-  Password:<input type="text" name="password"><br>
+  Password:<input type="password" name="password"><br>
 
   <input type="submit" value="Sign Up">
 </form>
