--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -5,5 +5,5 @@
   Email: <input type="text" name="email"><br>
   Password:<input type="password" name="password"><br>
 
-  <input type="submit" value="Sign Up">
+  <input type="submit" value="Sign Up" id="submit">
 </form>
