--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -1,1 +1,7 @@
-Show a single user's info & their tweets?
+<h1>Your Tweets</h1>
+
+<ul>
+  <% @user.tweets.each do |tweet| %>
+    <li> <a href="/tweets/<%= tweet.slug %>"><%= tweet.name %></a></li>
+  <% end %>
+</ul>
