--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,11 @@
-<h1>Your Tweets</h1>
+<% if flash.has?(:message) %>
+<%= flash[:message] %>
+<% end %>
+<h1>Welcome, <%= @user.username %></h1>
 
-<% @user.tweets.each do |tweet| %>
-<p><%= tweet.content %></p>
+<% User.all.each do |user| %>
+<% user.tweets.each do |tweet|%>
+<p><%= user.username %>: <%= tweet.content %></p>
 <br><br>
+<% end %>
 <% end %>
