--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,6 @@
+<% if flash.has?(:message) %>
+<%= flash[:message] %>
+<% end %>
 <h1>Welcome to Fwitter</h1>
 <p>Enjoy<i> Plagiarism</i></p>
 <br><br>
