--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,9 @@
 <h2> Welcome to Fwitter!<h2>
 
-<!--
-All of this is inherited from the layout page
-1. Should load a home page
-2. Should link to a login page
-3. Should link to a signup page
-4. Should respond to a get request /
--->
+<form action="/login" method="get">
+  <input type="submit" value="Log In?">
+</form>
+
+<form action="/signup" method="get">
+  <input type="submit" value="Sign Up?">
+</form>
