--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,16 @@
-<h4>Welcome, <%= current_user.username %></h4>
+<!-- <h4>Welcome, <%= current_user.username %></h4> -->
 <br>
 <h2>@<%=current_user.username%> Tweets</h2>
-<table>
+
 <% @tweets.each do |tweet| %>
-  <td class="timestamp"><%= tweet.created_at %>:</td>
-  <td class="tweets"><%= tweet.content %></td>
+  <p class="timestamp"><%= tweet.created_at %>:</p>
+  <p class="tweets"><%= tweet.content %></p>
+  <p><%=tweet.user.username%></p>
+  <br><br>
 <%end%>
-</table>
+
+
+<form action="/tweets/new" method="get">
+  <input type="submit" value="Create new Tweet?">
+
+</form>
