--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -6,6 +6,6 @@
   <input type="text" name="email">
   <label>Password:</label>
   <input type="password" name="password">
-  <input type="submit" value="Sign Up">
+  <input type="submit" value="submit">
 
 </form>
