--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,7 @@
-<h1>Log In</h1>
+<h1>Login to Fwitter!</h1>
 
 <form action="/login" method="post">
-  <label>Username: </label>
-  <input type="text" name="username">
-  <label>Password: </label>
-  <input type="password" name="password">
-  <input class="btn btn-primary" type="submit" value="Log In">
+<input type="text" name="username" placeholder="Username:">
+<input type="text" name="password" placeholder="Password:">
+<input type="submit" value="submit">
 </form>
