--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,4 @@
-<h2>@<%=tweet.user.username%></h2>
+<h2>@<%=@tweet.user.username%></h2>
 <br><br>
 <p><%=@tweet.created_at%>:  <%= @tweet.content %></p>
 <br><br>
