--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,12 +1,11 @@
 <!-- <h4>Welcome, <%= current_user.username %></h4> -->
 <br>
-<h2>@<%=current_user.username%> Tweets</h2>
+<h2>Tweets</h2>
 
 <% @tweets.each do |tweet| %>
   <p class="timestamp"><%= tweet.created_at %>:</p>
-  <p class="tweets"><%= tweet.content %></p>
-  <p><%=tweet.user.username%></p>
-  <br><br>
+  <p class="tweets"><strong>@<%=tweet.user.username%></strong> tweeted:  <%= tweet.content %></p>
+  <br>
 <%end%>
 
 
