--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,7 +5,8 @@
   <body>
    <% if logged_in? %>   
       <p>Welcome, <%=current_user.username%>
-      <a href="/tweets/new"> Create Tweet </a>
+      <a href="/tweets/new"> Create Tweet</a>
+      <a href="/logout">Log Out</a>
    <% else %>
       <a href="/signup">Sign Up</a>
       <a href="/login">Login</a>
