--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,7 +5,7 @@
 
 <form method="post" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" name="delete" id="Delete Tweet" value="Delete Tweet">
+  <input type="submit" value="Delete Tweet">
 </form>
 
 <br>
