Pass rest of tests

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,7 @@
-Create a new tweet
+<h1>Create A New Tweet</h1>
+
+<form action="/tweets" method="post">
+  Content: <input type="text" name="content"><br>
+
+  <input type="submit" value="Create" id="submit">
+</form>
