--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,9 @@
-Show a single tweet
+<h2> <%= @tweet.content %></h2>
+
+<form action="/tweets/<%= @tweet.id %>/edit" method="get">
+  <input type="submit" value = "Edit Tweet" name="Edit Tweet">
+</form>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input type="submit" name ="Delete Tweet" value="Delete Tweet" id="Delete Tweet">
+</form>
