--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,4 +5,6 @@
   Password: <input type="text" name="password"><br>
 
   <input type="submit" value="Log In" id="submit">
+
+  <a href="/signup">Sign Up</a>
 </form>
