--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,6 @@
-<h1>This is where we make new tweets</h1>
+<h3>Tweet away:</h3>
+
+<form action="/tweets" method="post">
+  <p>New tweet: <input type="text" name="content"></p>
+  <input type="submit" value="submit">
+</form>
