--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,2 +1,7 @@
 <h2>Welcome, <%= current_user.username %></h2>
-<h3>Tweets</h3>
+
+<% @tweets.each do |tweet| %>
+  <div><%=tweet.content%></div>
+<%end%>
+<br>
+<a href="/logout">Log out</a>
