--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="post">
   <p>Username: <input type="text" name="username"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input type="submit" value="Log in">
+  <input type="submit" value="submit">
 </form>
