--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to Fwitter</h1>
-<label>Sign Up </label>
-<label>Log In</label>
+<h4>Please sign up or log in to access your account</h4>
+<a href="/signup">Sign Up</a>
+<a href="/login">Log In</a>
