--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,11 @@
 <h1>Welcome, <%= @user.username %> </h1>
 
- <p> <%=tweet.content%></p>
+ <p> <%=@tweet.content%> </p>
 
+ 
+ <input type="submit" value="Edit Tweet">
+<form method="POST" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+
+</form>
