--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,5 +3,5 @@
 <h3> Welcome, <%=@user.username%> </h3>
 
   <% Tweet.all.each do |tweet| %>
-    <p> <%= User.find(tweet.user_id).username%>:    <%=tweet%> </p>
+    <p> <%= User.find(tweet.user_id).username%>:    <%=tweet.content%> </p>
     <% end %>
