--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up Below:</h1>
 <form action="/signup" method="post">
-  <p>Name: <input id="username" type="text" name="username"></p>
+  <p>Username: <input id="username" type="text" name="username"></p>
   <p>Email: <input id="email" type="text" name="email"></p>
   <p>Password: <input id="password" type="text" name="password"></p>
   <input type="submit" name="submit" value="Sign Up">
