--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="post">
   <p>Username: <input id="username" type="text" name="username"></p>
   <p>Password: <input id="password" type="text" name="password"></p>
-  <input type="submit" name="submit" value="Log In">
+  <input type="submit" id="submit" value="Log In">
 </form>
