--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<form class="" action="/tweets" method="post">
+<form action="/tweets" method="post">
   <input type="text" name="content">
   <input type="submit" id="submit" value="Tweet">
 </form>
