--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,4 @@
-<h1>Welcome <%=@user.username%></h1>
+<h1>Welcome, <%=current_user.username%></h1>
+
+
+<a href="/logout"><button type="button" name="button">Logout</button></a>
