--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,5 +5,5 @@
   <br>
   <input type="password" name="password" id="password" placeholder="password">
   <br><br>
-  <input type="submit" value="Log In">
+  <input type="submit" id="submit" value="Log In">
 </form>
