--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,7 @@
 <h1>Welcome, <%=current_user.username%></h1>
 
 <%Tweet.all.each do |tweet|%>
-  <%=tweet.content%>
+  <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
 <% end %>
 
 <a href="/tweets/new"><button type="button" name="button">New Tweet</button></a>
