--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,7 +4,9 @@
 <h3><%=@tweet.content%></h3>
 <br><br>
 
-<div class="buttons">
-  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
-  <a href="/tweets/<%=@tweet.id%>/delete"><button type="button" name="button">Delete Tweet</button></a>
-</div>
+    <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+    <form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
+      <input type="hidden" id="hidden" name="_method" value="delete">
+      <input type="submit" value="Delete Tweet">
+    </form>
