--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,5 +1,8 @@
 <h1>Sign Up For Fwitter</h1>
 
+<%if flash.has?(:notice)%>
+  <%=flash[:notice]%>
+<% end %>
 
 <form class="" action="/signup" method="post">
   <input type="text" name="username" id="username" placeholder="username..">
