--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -7,3 +7,6 @@
   <br><br>
   <input type="submit" id="submit" value="Log In">
 </form>
+<br>
+
+<button type="button" class="btn btn-light"><a href="/">Home</a></button>
