--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,19 +1,15 @@
 
-
+<%if flash.has?(:notice)%>
+  <%=flash[:notice]%>
+<% end %>
 
 <h3><%=@tweet.content%></h3>
 <br><br>
 
-<<<<<<< HEAD
+
     <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
     <form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
       <input type="hidden" id="hidden" name="_method" value="delete">
       <input type="submit" value="Delete Tweet">
     </form>
-=======
-<div class="buttons">
-  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
-  <a href="/tweets/<%=@tweet.id%>/delete"><button type="button" name="button">Delete Tweet</button></a>
-</div>
->>>>>>> 00e8451e94461a510472b012932296655a341f7b
