--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,8 +1,9 @@
 <h1>Welcome, <%=current_user.username%></h1>
 
 <%Tweet.all.each do |tweet|%>
-  <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
+  <%=tweet.content%> --<a href="/tweets/<%=tweet.id%>"><%=tweet.user.username%></a>
 <% end %>
+<br><br>
 
 <a href="/tweets/new"><button type="button" name="button">New Tweet</button></a>
 
