--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,9 @@
-<h1><%= @user.name%>'s Tweets</h1>
+<h1><%= @user.username%>'s Tweets</h1>
 
 <%@user.tweets.each do |tweet|%>
-  <%=tweet.content%>
+  <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
   <br><br>
 <% end %>
+
+<a href="/tweets/new"><button type="button" name="button">New Tweet</button></a>
+<a href="/tweets"><button type="button" name="button">Home</button></a>
