--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -7,7 +7,9 @@
 <br><br>
 
 
-    <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+    <a href="/tweets/<%=@tweet.id%>/edit"><button type="button" name="button">Edit Tweet</button></a>
+    <br>
+    <a href="/tweets"><button type="button" name="button">Home</button></a>
 
     <form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
       <input type="hidden" id="hidden" name="_method" value="delete">
