--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,21 @@
-<h1>Welcome to Fwitter</h1>
 
+<style media="screen">
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #61b0f9;
+  border-radius: 0.3rem;
+}
+</style>
+
+
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Welcome to Fwitter</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
+</div>
 
 <a href="/signup"><button type="button" name="button">Signup</button></a>
 
