--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,6 +10,23 @@
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 
 
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/bootstrap.css">
+
+     <style media="screen">
+
+      /*.navbar-brand {
+        position: absolute;
+        right: 0;
+      }*/
+      #enter-site {
+        position: relative;
+        display: inline;
+        float: right;
+      }
+
+
+    </style>
   </head>
   <body>
 
@@ -39,9 +56,19 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+          <span id="enter-site">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Signup</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Login</a>
+            </li>
+          </span>
         </ul>
       </div>
     </nav>
+
+
 
 
 
