--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,10 @@
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #61b0f9;
+  background-color: #1da1f2;
   border-radius: 0.3rem;
+  text-align: center;
+  color: white;
 }
 </style>
 
