--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,10 +15,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Welcome to Fwitter</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <p class="lead">Where we care about what you have to say..</p>
   </div>
 </div>
-
-<a href="/signup"><button type="button" name="button">Signup</button></a>
-
-<a href="/login"><button type="button" name="button">Log In</button></a>
