--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,7 +29,7 @@
             <a class="nav-link" href="/tweets">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="/tweets/new">New Tweet</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="users/<%=current_user.slug%>">My Page</a>
@@ -62,7 +62,7 @@
     <%=yield%>
     <div class="notice">
       <%if flash.has?(:notice)%>
-      <%=flash[:notice]%>
+        <%=flash[:notice]%>
       <% end %>
     </div>
 
