--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,11 +9,11 @@
     <div class="input-group-prepend">
       <div class="input-group-text">@</div>
     </div>
-    <input type="text" name="username" class="form-control" id="username" placeholder="Username">
+    <input type="text" name="username" class="form-control" id="username" placeholder="Username" required>
   </div>
 
   <label class="sr-only" for="inlineFormInputName2">Name</label>
-  <input type="password" name="password" class="form-control mb-2 mr-sm-2" id="password">
+  <input type="password" name="password" class="form-control mb-2 mr-sm-2" id="password" placeholder="Password" required>
 
   <input type="submit" class="btn btn-primary mb-2" id="submit" value="Log In">
 </form>
