--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,9 +1,16 @@
-<h1><%= @user.username%>'s Tweets</h1>
+
+<h3><%= @user.username%>'s Tweets</h3>
 
 <%@user.tweets.each do |tweet|%>
-  <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
-  <br><br>
+  <div class="card">
+  <div class="card-header">
+    Tweet
+  </div>
+  <div class="card-body">
+    <h6 class="card-title"><%=tweet.content%></h6>
+    <br>
+    <a href="/tweets/<%=tweet.id%>" class="btn btn-sm btn-primary">View Tweet</a>
+  </div>
+</div>
+  <br>
 <% end %>
-
-<a href="/tweets/new"><button type="button" name="button">New Tweet</button></a>
-<a href="/tweets"><button type="button" name="button">Home</button></a>
