--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,11 @@
-<h1>New Tweet</h1>
+<h3>New Tweet</h3>
+  <br>
 
 <form class="" action="/tweets" method="post">
-  <input type="text" name="content" id="content">
-  <br><br>
-  <input type="submit" value="submit">
+  <div class="input-group ml-2">
+    <div class="input-group-prepend">
+      <input type="submit" class="btn btn-primary" value="submit">
+    </div>
+  <input type="text" class="form-control form-group col-md-6" name="content" aria-label="Username" aria-describedby="basic-addon1">
+  </div>
 </form>
