--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -48,5 +48,5 @@
     </div>
   </div>
 
-  <input type="submit" class="btn btn-primary" value="Signup">
+  <input type="submit" class="btn btn-primary ml-3" value="Signup">
 </form>
