--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 
 <h3><%= @user.username%>'s Tweets</h3>
 
-<%@user.tweets.each do |tweet|%>
+<%@user.tweets.reverse.each do |tweet|%>
   <div class="card">
   <div class="card-header">
     Tweet
