--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,11 @@
 <h1>Sign up</h1>
 <hr>
 <form action="/signup" method="post">
-  Username: <input type="text" name="username" id="username" required default><br><br>
-  Email: <input type="email" name="email" id="email" required><br><br>
-  Password: <input type="password" name="password" id="password" required><br><br>
+  Username: <input type="text"
+    name="username" id="username" required default><br>
+  Email: <input type="email"
+    name="email" id="email" required><br>
+  Password: <input type="password"
+    name="password" id="password" required><br>
   <input type="submit" value="submit">
 </form>
