--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,9 @@
-<form action="/tweets" method="post">
+<form action="/login" method="post">
   <label>Enter User Name:</label>
-  <input type="text" name="user[name]" value="" id="username">
+  <input type="text" name="username" value="" id="username">
 
   <label>Enter password:</label>
-  <input type="password" name="user[password]" value="" id=password>
+  <input type="password" name="password" value="" id=password>
 
   <input type="submit" value="submit">
 
