--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,13 +1,13 @@
 
 <form action="/signup" method="post">
   <label>Enter User Name:</label>
-  <input type="text" name="user[name]" value="" id="username">
+  <input type="text" name="username" value="" id="username">
 
   <label>Enter password:</label>
-  <input type="password" name="user[password]" value="" id=password>
+  <input type="password" name="password" value="" id=password>
 
   <label>Enter Email:</label>
-  <input type="text" name="user[email]" value="" id="email">
+  <input type="text" name="email" value="" id="email">
 
   <input type="submit" value="Sign up">
 
