--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,6 +6,5 @@
   <input type="submit" value="Delete Tweet">
   
 </form>
-
-<label>Edit Tweet</label>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 <!-- should be link to edit form here -->
