--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,7 +3,4 @@
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
-<form action="/tweets/<%=@tweet.id%>/edit" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="submit" value="Edit Tweet">
-</form>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
