--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,3 @@
  <h2> "Welcome to Fwitter" </h2>
+
+ <p> Please <a href="/signup"> Sign Up</a> or <a href="/users/login"> Log In</a> to continue.</p>
