Add comments to app/view/show.erb

--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -6,7 +6,9 @@
   <%= tweet.content %> <br>
 <% end %> -->
 
-
+<!-- having trouble getting the user's names to appear.  Finally solved below. -->
+<!-- Finally remembered that USERs have Many tweets, and I could -->
+<!-- iterate through USERs first, and THEN iterate through tweets -->
 
 
 
