--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,3 +4,7 @@
   <input type="text" name="content" placeholder="<%=@tweet.content%>">
   <input type="submit" value="submit">
 </form>
+<form action="/tweets/<%=@tweet.id%>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <button type="submit" value="Delete Tweet" name="Delete Tweet">Delete Tweet</button>
+</form>
