--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -12,3 +12,6 @@
   <input type="password" name="password" placeholder="Password:">
   <input type="submit" value="Sign Up">
 </form>
+
+
+<p> <a href= "/" > Back to Home Page </a> </p>
