--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -11,3 +11,6 @@
   <input type="password" name="password" placeholder="Password:">
   <input type="submit" value="Log In">
 </form>
+
+
+<p> <a href= "/" > Back To Home Page </a> </p>
