--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
-<h2>Create Tweet</h2>
-<form action="/tweets" method="post">
-  Your tweet: <input type="text" name="content"><br>
+<h2>Add a tweet</h2>
+<form action="/tweets" method="POST">
+  <p>Status: <input type="text" name="content"></p>
   <input type="submit" value="submit">
 </form>
