--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,7 @@
-<h2>Edit Tweet</h2>
+<h2> Edit Tweet </h2>
 
-<form action="/tweets/<%= @tweet.id %>/edit" method="post">
+<form method="post" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="content" value="<%= @tweet.content %>" id="content"><br>
+  <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
 </form>
