--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,6 @@
-<h2>Welcome, <%= @user.username %>!</h2>
+<p> Welcome, <%= current_user.username %></p>
+<h3>Tweets</h3>
 
-<% Tweet.all.each do |tweet| %>
-  <label><%= tweet.content %></label>
+<% @tweets.each do |tweet| %>
+<%= tweet.content %>
 <% end %>
