--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,18 +1,9 @@
-<h1>Create login</h1>
+<h1>Please Provide an Email to Create a Username and Password</h1>
 
-<form action="/signup" method="post">
-  <label>Username:</label>
-  <input type="text" name="username">
-  <br></br>
+<form action='/signup' method="post">
 
-  <label>Email:</label>
-  <input type="text" name="email">
-  <br></br>
-
-  <label>Password:</label>
-  <input type="password" name="password">
-  <br></br>
-
-  <input type="submit" value="Sign up">
-
+  <p> Email: <input type="email" name="email"></p><br>
+  <p> Username: <input type="text" name="username"></p><br>
+  <p> Password: <input type="password" name='password'></p><br>
+  <input type="submit" value="Create User">
 </form>
