--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,9 @@
-<h2>User Login</h2>
-
 <form action="/login" method="post">
-  <label>Username: <input type="text" name="username"></label>
-  <label>Password: <input type="password" name="password"></label>
-  <label><input type="submit" value="submit"></label>
+<label>Username:</label>
+<input type="text" name="username"><br>
+
+<label>Password:</label>
+<input type="password" name="password"><br>
+
+ <input type="submit" value="submit">
 </form>
