--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <h2>Add a tweet</h2>
-<form action="/tweets" method="POST">
+<form action="/tweets" method="post">
   <p>Status: <input type="text" name="content"></p>
   <input type="submit" value="submit">
 </form>
