--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,5 @@
 <form action="/login" method="POST">
   Username: <input type="text" name="username" id="username"/>
   Password: <input type="text" name="password" id="password"/>
-
-  <input type="submit" value="Log In"/>
+  <input type="submit" value="Log In" id="submit"/>
 </form>
