--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,10 @@
 Welcome, <%=current_user.username%>
+<br></br>
+Your tweets are:
+<%@tweets.each do |tweet|%>
+<ul>
+  <li><%=tweet.content%></li>
+
+</ul>
+
+<%end%>
