--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <h3>Log In</h3>
-<form action="/users/login" method="POST">
+<form action="/login" method="POST">
   <input type="text" name="username" placeholder="Username:">
   <input type="text" name="email" placeholder="Email:">
   <input type="password" name="password" placeholder="Password:">
