--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -7,9 +7,8 @@
 <h3>Log In</h3>
 <form action="/login" method="POST">
   <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="email" placeholder="Email:">
   <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
 
 
