--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -12,4 +12,4 @@
 </form>
 
 
-<p> <a href= "/" > Back To Home Page </a> </p>
+<p> <label> Back To Home Page To Register (If not already registered! <a href= "/" > </a> </p>
