--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,12 +1,10 @@
 <h2> <%=current_user.username%>, Tweet to Edit: <%=@tweet.content%> </h2>
 
-<form action = "/tweets/<%=@tweet.id%>" method = "POST"
-  <input type= "hidden" name= "_method" value = "PATCH">
+<form action = "/tweets/<%= @tweet.id >/edit" method = "POST"
+  <input id = "hidden" type = "hidden" name= "_method" value = "PATCH">
 
   <h3> Tweet Conent</h>
-
-    <input type = "text" name = "content" value= "<%=@tweet.content%>" id = "content"> </input>
-
-  <label> <iinput type = "submit" value = "Save"> </label>
+    <input type = "text" name = "content" value= "<%= @tweet.content %>"> </input>
+    <label> <input type = "submit" value = "submit"> </label>
 
   </form>
