--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -12,4 +12,4 @@
 </form>
 
 
-<p> <label> Back To Home Page To Register (If not already registered! <a href= "/" > </a> </p>
+<p> To Go Back To Home Page and Register -if not already <a href= "/"> Select </a> </p>
