--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,7 @@
 <h2> <%=current_user.username%>, Tweet to Edit: <%=@tweet.content%> </h2>
 
-<form action = "/tweets/<%= @tweet.id >/edit" method = "POST"
-  <input id = "hidden" type = "hidden" name= "_method" value = "PATCH">
+<form action = "/tweets/<%= @tweet.id >" method = "POST"
+  <input id = "hidden" type = "hidden" name= "_method" value = "patch">
 
   <h3> Tweet Conent</h>
     <input type = "text" name = "content" value= "<%= @tweet.content %>"> </input>
