--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -21,3 +21,6 @@
 </br> </br>
 <label> To See All Tweets: </label>
 <a href= "/tweets"> "All Tweets"</a>
+
+</br> </br>
+<a href= "/logout"> Select To Logout</a>
