--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,8 @@
 <h2> Welcome to Fwitter, Please Sign Up</h2>
 
-<% if flash.has?(:message) %>
+<h4 style = "color:red;"><% if flash.has?(:message) %>
 <%= flash[:message] %>
-<% end %>
+<% end %></h4>
 
 
 <h3>Sign Up</h3>
