--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,8 @@
 <h3> Welcome to Fwitter, Please Log In </h3>
 
-<% if flash.has?(:message) %>
+<h4 style = "color:red;"><% if flash.has?(:message) %>
 <%= flash[:message] %>
-<% end %>
+<% end %></h4>
 
 <h3>Log In</h3>
 <form action="/login" method="POST">
@@ -10,6 +10,3 @@
   <input type="password" name="password" placeholder="Password:">
   <input type="submit" value="submit">
 </form>
-
-
-<p> To Go Back To Home Page and Register -if not already <a href= "/"> Select </a> </p>
