--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,5 @@
 
-<label> Here is <%=current_user.username%>'s Tweet: </label>
+<h2> Here is <%=current_user.username%>'s Tweet: </h2>
 
 <h3> <%= @tweet.content %> </h3>
 
@@ -17,6 +17,10 @@
 
 <label> To Edit This Tweet Select: </label>
 <a href= "/tweets/<%=@tweet.id%>/edit"> "Edit Tweet"</a>
+
+<p> Add <%=current_user.username%> <a href = "/tweets/new" > New Tweet </a> </p>
+
+<p> <%=current_user.username%> Only Tweets <a href= "/users/<%= current_user.username %>">Select  </a> </p>
 
 </br> </br>
 <label> To See All Tweets: </label>
