--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,15 +1,9 @@
 <h2> Hello, <%=current_user.username%> </h2>
 
-<label> Your List of Tweets Follows </label>
+<p> Your List of Tweets Follows </p>
 
 <% current_user.tweets.each do |tweet|%>
 <li> <%= tweet.content %> </li>
 <%end%>
 
 </br></br>
-
-<a href= "/logout"> Select To Logout</a>
-
-
-</br></br>
-<a href= "/tweets"> Select To View Tweets By All Users</a>
