--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,8 +1,8 @@
 <h3> A New Tweet From User:   <%= current_user.username%></h3>
 
-<% if flash.has?(:message) %>
+<h4 style = "color:red;"><% if flash.has?(:message) %>
 <%= flash[:message] %>
-<% end %>
+<% end %></h4>
 
 </br> </br>
 
