--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,7 +2,7 @@
 
 
 
-<label>All Tweets!</label>
+<label>All User Tweets!</label>
 </br></br>
 <% @tweets.each do |tweet|%>
 <li> <%= tweet.content %> </li>
