--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,12 +1,16 @@
 
 <h2> Hello, <%=current_user.username%> </h2>
 
+<h4 style = "color:red;"><% if flash.has?(:message) %>
+<%= flash[:message] %>
+<% end %></h4>
+
 <p> Your List of Tweets Follows </p>
 
 <% current_user.tweets.each do |tweet|%>
- <li> <a href="/tweets/<%=tweet.id%>/edit"> <%=tweet.content%> </a></li>
+ <li> <a href="/tweets/<%=tweet.id%>"> <%=tweet.content%> </a></li>
 <%end%>
 </br>
-<label> Select A Tweet To Edit </label>
+<label> Select A Tweet To Edit or Delete</label>
 
 </br></br>
