--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,11 +1,21 @@
-<h1>Welcome, <%= @user.username %></h1>
+<% @current_user = current_user%>
+<h1>Welcome, <%= @current_user.username %></h1>
+
 
 <!-- TODO: If no tweets, display a custom message -->
-<!-- TODO: If there are tweets, add the tweet belongs to the current user, display an edit button next to the tweet -->
-<!-- TODO: Add a new "tweet" button to the header once the user is logged in -->
-Here are of the tweets:
 
 <% Tweet.all.each do |tweet| %>
-	<p><%= tweet.content %></p>
+<div class="card border-secondary mb-3" style="max-width: 20rem;">
+		<div class="card-header"><%= tweet.user.username %></div>
+		<div class="card-body">
+			<p class="card-text">
+				<%= tweet.content %>
+				<br>
+				<% if current_user.id == tweet.user_id %>
+					<a href="/tweets/<%= tweet.id %>/edit"><span class="badge badge-primary">Edit</span></a>
+				<% end %>
+			</p>
+		</div>
+	</div>
 <% end %>
 
