--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,9 +1,14 @@
-<h1>New Tweet</h1>
+<h2>New Tweet</h2>
 
 <form action='/tweets' method='POST'>
-	<textarea rows="5" cols = "50" name="content" id="tweet"></textarea>
+	<textarea rows="5" cols = "20" name="content" class="form-control" id="tweet"></textarea>
+	
+	<!-- <textarea class="form-control" id="exampleTextarea" rows="3"></textarea> -->
+	
 	<br>
 
-	<input type="submit" value="Tweet it!" id="submit">
+
+	<!-- <input type="submit" value="Tweet it!" id="submit"> -->
+	<button type="submit" class="btn btn-primary" id="submit">Tweet it!</button>
 	
 </form>
