--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,15 @@
-<h1>Edit Tweet</h1>
+<h2>Edit Tweet</h2>
 
 <form action='/tweets/<%= @tweet.id %>' method='POST'>
 	<input type="hidden" id="hidden" name="_method" value="PATCH">
-	<textarea rows="5" cols = "50" name="content" id="tweet" value="<%= @tweet.content %>"></textarea>
+	<textarea rows="5" cols = "50" name="content" class="form-control" id="tweet" ><%= @tweet.content %></textarea>
+	
 	<br>
 
-	<input type="submit" value="Edit Tweet" id="submit">
-	
+	<input type="submit" value="Edit Tweet" class="btn btn-primary" id="submit">
+</form>
+
+<form action='/tweets/<%= @tweet.id %>' method='POST'>
+	<input type="hidden" name="_method" id="hidden" value="DELETE">
+	<input type="submit" value="Delete Tweet" class="btn btn-danger" id="Delete Tweet">
 </form>
