--- a/app/views/tweets/error.erb
+++ b/app/views/tweets/error.erb
@@ -1,2 +1,9 @@
-ERROR!
-<!-- TODO: Build the tweet error page -->
+<div class="jumbotron">
+	<h1 class="display-3">404, Tweet not found!</h1>
+	<p class="lead">Sorry, that tweet doesn't exist (or maybe it flew away and we can't find it?).</p>
+	<hr class="my-4">
+	<p>Why not create a new tweet instead?  Click the button below to get started...</p>
+	<p class="button">
+			<button type="button" class="btn btn-info btn-lg" onclick="window.location.href='/tweets/new'">NEW TWEET!</button>
+	</p>
+</div>
