--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,3 +1,4 @@
-<form method="POST" action="/tweets/tweets">
-
+<form method="POST" action="/tweets/new">
+  <textarea name="content" id="content" maxlength="240"></textarea><br>
+  <input type="submit" value="submit">
 </form>
