--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 <%=@tweet.content%><br>
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
-
+<br>
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Tweet">
+  <input type="submit" value="Delete Tweet"></input>
 </form>
